--- a/src/pages/quotes/quotes.scss
+++ b/src/pages/quotes/quotes.scss
@@ -1,3 +1,14 @@
 page-quotes {
+ .author {
+     color: #cccccc;
+     text-align: right;
+     text-transform: uppercase;
+     margin: 0;
+     padding: 0;
+
+     &::before{
+        content: '_ ';
+     }
+ }
 
 }
