--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,22 @@
-<ion-nav [root]="rootPage"></ion-nav>
+
+<ion-menu [content]="nav">
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <button ion-item (click)="onLord(tabsPage)">
+                <ion-icon name="quote" item-left></ion-icon>
+                Quotes
+            </button>
+            <button ion-item (click)="onLord(settingPage)">
+                    <ion-icon name="settings" item-left></ion-icon>
+                    Setting
+                </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="tabsPage" #nav></ion-nav>
